<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Moviescopio</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refrescar</string>
    <string name="action_share" translatable="false">Compartir</string>

    <string name="title_activity_detail">Detalle</string>
    <string name="title_activity_settings">Configuraciones</string>

    <!-- Label for preference -->
    <string name="pref_genre_label">Genero</string>

    <string name="pref_genre_label_drama">Drama</string>
    <string name="pref_genre_label_mystery">Misterio</string>
    <string name="pref_genre_label_scifi">Ciencia Ficcion</string>
    <string name="pref_genre_label_thriller">Suspenso</string>

    <string name="pref_genre_key" translatable="false">genre</string>
    <string name="pref_genre_default" translatable="false">878</string>

    <string name="pref_genre_drama" translatable="false">18</string>
    <string name="pref_genre_mystery" translatable="false">9648</string>
    <string name="pref_genre_scifi" translatable="false">878</string>
    <string name="pref_genre_thriller" translatable="false">53</string>

    <string name="sync_account_type">moviescopio.marcoviaweb.net</string>
    <string name="content_authority">net.marcoviaweb.moviescopio</string>

    <!-- Notification Format -->
    <string name="format_notification">Movie: <xliff:g id="movie">%1$s</xliff:g> Vote: <xliff:g id="vote">%2$s</xliff:g></string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Movie Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="format_title">Title: <xliff:g id="title">%1$s</xliff:g></string>
    <string name="format_release_date">Release date: <xliff:g id="date">%1$s</xliff:g></string>
    <string name="format_vote_count">Vote count: <xliff:g id="vote">%1$s</xliff:g></string>
</resources>
